logs/Slang/chapter-12/12.7.4--while.sv.log
name: while_loop
description: A module testing while loop
should_fail: 0
tags: 12.7.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-12/12.7.4--while.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-12/12.7.4--while.sv:8:20: error: language feature not yet supported
	string test [4] = '{"111", "222", "333", "444"};
	                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
